--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -145,6 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"'Mehr Info'-Seite: alternative Anordnung">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
 <!ENTITY Ctr_am_nowarning	"Add-on 'Übersicht': Warnungen ausblenden">
+<!ENTITY Ctr_am_compact		"Add-on 'Übersicht': Kompakte Darstellung">
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on Installationsfenster (about:config Einstellung)">
 <!ENTITY Ctr_bmbutpanelm	"Lesezeichen-Menüschaltfläche: 'Panel-Aufklappmenü'-Darstellung">
