--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -145,6 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"Página 'más información' de los complementos: Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en la lista de complementos">
+<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo cuadro de instalación de complementos (... >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores (≠ barra lateral): Estilo de panel de menú">
