--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -145,6 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"Lisade 'rohkem teavet' leht: alternatiivne järjestus">
 <!ENTITY Ctr_alt_addonsm	"Lisade haldur: alternatiivne välimus">
 <!ENTITY Ctr_am_nowarning	"Lisade halduri laienduste loend: peida hoiatused">
+<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
 <!ENTITY Ctr_addonversion	"Lisade halduri laienduste loend: kuva lisade versioon">
 <!ENTITY Ctr_xpinstallui	"Lisade haldur: vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutpanelm	"Järjehoidjate menüü nupp: paneelimenüü välimus">
