--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -145,6 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"Pagina 'Altro' dei componenti aggiuntivi: aspetto alternativo">
 <!ENTITY Ctr_alt_addonsm	"Gestione componenti aggiuntivi: aspetto alternativo">
 <!ENTITY Ctr_am_nowarning	"Elenchi dei componenti aggiuntivi del gestore: nascondi avvisi">
+<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
 <!ENTITY Ctr_addonversion	"Elenchi dei componenti aggiuntivi del gestore: mostra versione del componente">
 <!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Menu del pulsante segnalibri: aspetto del menu a pannello">
