--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -145,6 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
 <!ENTITY Ctr_am_nowarning	"附加组件管理器列表: 隐藏警告">
+<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
 <!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
