--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -66,7 +66,7 @@
 <!ENTITY Ctr_closetab_4		"Na začátku lišty s panely">
 <!ENTITY Ctr_closetab_5		"Na všech panelech (vynutit)">
 <!ENTITY Ctr_closetab_hfot	"Skrýt pro jeden viditelný panel">
-<!ENTITY Ctr_closei_def		"Defaulní icony">
+<!ENTITY Ctr_closei_def		"Defaultní icony">
 <!ENTITY Ctr_closeonleft	"Alternativní pozice na panelu">
 <!ENTITY Ctr_close_wwltab	"Zavřít okno s posledním viditelným panelem (about:config)">
 
@@ -145,7 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"Stránka rozšíření lišty 'další info': alternativní vzhled">
 <!ENTITY Ctr_alt_addonsm	"Správce rozšíření: alternativní vzhled">
 <!ENTITY Ctr_am_nowarning	"Seznam Správce rozšíření: skrývat varování">
-<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
+<!ENTITY Ctr_am_compact		"Správce doplňků: kompaktní vzhled">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Tlačítko menu záložek: panel menu vzhledu">
@@ -158,7 +158,7 @@
 <!ENTITY Ctr_menupopupscr	"Nabídky: zobrazit rolovací lištu místo šipek">
 <!ENTITY Ctr_closegeneral	"Ikony pro zavření">
 
-<!ENTITY Ctr_tabsep_def		"Defaulní oddělovače panelů">
+<!ENTITY Ctr_tabsep_def		"Defaultní oddělovače panelů">
 <!ENTITY Ctr_fxmockup		"&brandShortName; Mockup">
 <!ENTITY Ctr_tabmokcolor	"Bílá barva pro tlačítka panelu (zavřít, nový, skupiny, seznam všech)">
 <!ENTITY Ctr_tabmokcolor2	"Bílá barva a tmavý stín pro text na neaktivních panelech">
@@ -194,7 +194,7 @@
 
 <!ENTITY Ctr_urlbar			"Adresní řádek">
 <!ENTITY Ctr_starinurl		"Tlačítko hvězdičky">
-<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
+<!ENTITY Ctr_starinurlinfo	"Skrýt tlačítka menu záložek">
 <!ENTITY Ctr_feedinurl		"Tlačítko kanálu">
 <!ENTITY Ctr_hideurelstop	"Skrýt tlačítka zastavit &amp; obnovit">
 <!ENTITY Ctr_hideurlgo		"Skrýt tlačítko 'přejít'">
@@ -291,7 +291,7 @@
 <!ENTITY Ctr_fx34loop		"&brandShortName; 34+ zavedena možnost 'volání a konverzace'. Odškrtnutím předvolby to bude odstraněno.">
 <!ENTITY Ctr_fx35devtheme	"&brandShortName; 35+ zaveden nový 'vývojářský vzhled'. Odšrtnutím předvolby se zakáže 'vývojářský vzhled' a jeho tlačítko v režimu přizpůsobení.">
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ zavedeno menu 'Možnosti' v panelu. Odškrtnutím předvolby se vrátíte ke starému způsobu 'Nástroje - Možnosti'.">
-<!ENTITY Ctr_fx36prefs2		"Note: Old preference window does not contain all recently added browser preferences!">
+<!ENTITY Ctr_fx36prefs2		"Poznámka: Staré okno předvoleb neobsahuje všechny nově přidané předvolby!">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ zaveden nový 'mód čtečky'. Odškrtnutím předvolby se to zruší, včetně ikony v adresním řádku.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ zavedena funkce 'Pocket'. Odškrtnutím se funkce zruší a odstraní se tlačítko v liště.">
 <!ENTITY Ctr_fx38pocket2	"Poznámka: Přetažením tlačítka 'Pocket' do 'nastavení lišty' před změnou této předvolby zde, se odstraní vstupy v 'Pocket' z menu záložky a čtečky.">
