--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -54,7 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"标签页的最小宽度和最大宽度由 TabUtilities 所控制">
 <!ENTITY Ctr_tabwidthinfo3	"小于48px的值在多数情况下可能出现问题!">
 <!ENTITY Ctr_square_edges	"方形顶部边角">
-<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
+<!ENTITY Ctr_tttitlebar		"在 &brandShortName; 标题栏显示标签页标题">
 <!ENTITY Ctr_tabinsertion	"在当前标签页后插入关联标签页 (about:config)">
 <!ENTITY Ctr_emptyfavicon	"使用空白网站小图标 (如果网站没有提供)">
 <!ENTITY Ctr_noemptypticon	"为固定的标签页移除空白小图标">
@@ -145,7 +145,7 @@
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
 <!ENTITY Ctr_am_nowarning	"附加组件管理器列表: 隐藏警告">
-<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
+<!ENTITY Ctr_am_compact		"附加组件列表: 紧凑视图">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
 <!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
@@ -194,7 +194,7 @@
 
 <!ENTITY Ctr_urlbar			"地址栏">
 <!ENTITY Ctr_starinurl		"五星按钮">
-<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
+<!ENTITY Ctr_starinurlinfo	"默认书签菜单按钮被隐藏">
 <!ENTITY Ctr_feedinurl		"RSS源按钮">
 <!ENTITY Ctr_hideurelstop	"隐藏停止和重新载入按钮">
 <!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
@@ -248,9 +248,9 @@
 <!ENTITY Ctr_transpttbw10	"标题/菜单/标签页工具栏: 移除背景颜色">
 <!ENTITY Ctr_transptcw10	"隐藏系统默认的 最小化/最大化/关闭 按钮">
 <!ENTITY Ctr_hidenavbar		"导航工具栏: 隐藏工具栏">
-<!ENTITY Ctr_navbarpad		"Additional left and right padding">
-<!ENTITY Ctr_navbarpad_l	"Left: ">
-<!ENTITY Ctr_navbarpad_r	"Right: ">
+<!ENTITY Ctr_navbarpad		"额外的左右内边距">
+<!ENTITY Ctr_navbarpad_l	"左: ">
+<!ENTITY Ctr_navbarpad_r	"右: ">
 <!ENTITY Ctr_nobookbarbg	"书签工具栏: 移除背景颜色">
 <!ENTITY Ctr_bookbarfs		"书签工具栏: 在全屏模式">
 <!ENTITY Ctr_nonavbarbg		"导航工具栏: 移除背景颜色">
